CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4a
------------
* Lagon level adjusted to better reflect his difficulty.
* Fixed a bug in Terry get oral.
* Fixed a bug in some characters' leveling pace.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3z
------------
* Naga mating scene (written by LonelyRonin) added (requires player being a naga and losing to the naga)
* The rest of the Terry Get Oral scene implemented, written by LD/QB
* Gwendy no longer remains in your passive party after you do the Layla sequence.
* A new scene for the Zebra shaman, written by Bluebusterman: Loss, get fucked. You need a pussy.
* Vena has some minor interactions in the Pit (not restored). No sex yet.
* Various minor bugs fixed
* Various typos fixed

Version 0.3y
------------
* Fixed a bug that showed up on firefox where the game wouldn't load.
* Fixed Terry's pregnancy getting reset on save/load.
* Did some refactoring on the farm, removing the Loiter scene and cleaning up the intro a bit. More will be done here at a later date.
* Layla added to farm. You need to defeat Orchid before you can meet her.
 - If you choose to take her, you can return after three days. If you don't, she's not intended to disappear, but right now she has no content on the farm.
 - Once you pick her up, she only has very basic follower interactions, including a huge first-time sex and a repeatable sex scene.
* Mothgirl oral now correctly gives xp and lust reduction.
* Fixed some erroneus hip descriptors.

Version 0.3x2
-------------
* Fixed a bug in Zebra shaman encounter.
* Terry's pet option now has a back button.
* Terry now has a lick pussy sex option (should help out with that soft lock problem) written by LD & QB.