@@ -13,6 +13,8 @@ function Outlaws(storage) {
 	
 	this.relation = new Stat(0);
 	
+	this.BTRewardTimer = new Time();
+	
 	if(storage) this.FromStorage(storage);
 }
 
@@ -23,6 +25,8 @@ Outlaws.prototype.ToStorage = function() {
 	if(this.relation.base != 0)
 		storage.rep = this.relation.base.toFixed();
 	
+	storage.BTtime = this.BTRewardTimer.ToStorage();
+	
 	return storage;
 }
 
@@ -32,10 +36,12 @@ Outlaws.prototype.FromStorage = function(storage) {
 	for(var flag in storage.flags)
 		this.flags[flag] = parseInt(storage.flags[flag]);
 	this.relation.base = !isNaN(parseInt(storage.rep)) ? parseInt(storage.rep) : this.relation.base;
+	
+	this.BTRewardTimer.FromStorage(storage.BTtime);
 }
 
 Outlaws.prototype.Update = function(step) {
-	
+	this.BTRewardTimer.Dec(step);
 }
 
 
@@ -52,6 +58,9 @@ Outlaws.prototype.AlaricSaved = function() {
 	return this.BullTowerCompleted() && (this.flags["BT"] & Outlaws.BullTower.AlaricFreed);
 }
 
+Outlaws.prototype.BullTowerCanGetReward = function() {
+	return this.AlaricSaved() && (this.flags["BT"] & Outlaws.BullTower.ContrabandStolen) && (this.flags["BT"] & Outlaws.BullTower.SafeLooted);
+}
 Outlaws.prototype.Rep = function() {
 	return this.relation.Get();
 }
