@@ -6,11 +6,6 @@ TODO for Fall of Eden
 -----------------
 
 
-BullTower
-- Reward timer/flags/triggers
-
-
-
 - Diva stats/abilities
 
 Rigard:
