@@ -7,6 +7,9 @@ CHANGELOG for Fall of Eden
 
 Version 0.4a
 ------------
+* The Bull Tower: Huge new dungeon, in the style of Krawitz quest. Written by The Observer.
+ - Get at least 60 rel with Cveta at the Outlaws (need to meet with her dawn and dusk a few times to get past the initial barrier), then enter the Outlaw camp
+ - This one should be much more complex than Krawitz, and offer more rewards. If you score well, you can return to the Outlaw camp after a few days to cash in your reward.
 * Lagon level adjusted to better reflect his difficulty.
 * Fixed a bug in Terry get oral.
 * Fixed a bug in some characters' leveling pace.
